# uiic_automation

./: .gitignore  README.md  build.bat  build.py  fix_uploads.py  main.py  original_8920388_assessment.py  pyproject.toml  requirements-build.txt  requirements.txt  runtime_hook_paddle.py  temp_old_assessment.py  temp_old_documents.py  try.py  uiic_automation.spec
.github/workflows/: release.yml
app/: utils.py
app/automation/: captcha_solver.py  claim_assessment.py  claim_documents.py  engine.py  form_helpers.py  interim_report.py  login_module.py  navigation_module.py  selectors.py  tab_utils.py
app/automation/services/: document_upload_service.py
app/config/: doc_mapping.json  field_mapping.json  settings.json  settings.json.example
app/data/: data_model.py  excel_reader.py  folder_scanner.py
app/ui/: main_window.py  styles.qss  worker.py
app/ui/components/: __init__.py  home_page.py  progress_page.py  settings_page.py  widgets.py
app/ui/services/: claim_folder_service.py  log_formatter.py
automationfolderuploading/: Re-Inspection Report format.xlsx  new_sample.xlsx  ~$new_sample.xlsx
logs/: automation.log.1  automation.log.2  automation.log.3  form_dump_claim_assessment.html  form_dump_claim_documents.html  form_dump_interim_report.html
pyinstaller_hooks/: hook-lxml.isoschematron.py  hook-pycparser.py  hook-scipy.special._ufuncs.py  runtime_hook.py
tests/: test_automation.py  test_claim_documents_orchestration.py  test_claim_folder_service.py  test_engine_portal_transitions.py
