[project]
name = "uiic-automation"
version = "1.0.0"
description = "UIIC Insurance Surveyor Portal Automation Tool"

# Preferred build/runtime Python is 3.10 for the Windows EXE, but
# the project also supports 3.11/3.12 for local development.
requires-python = ">=3.10,<3.13"

# These are the exact version constraints to prevent the C++ crash
dependencies = [
    # GUI & Browser Automation
    "PyQt6>=6.5.0",
    "playwright>=1.40.0",
    "pyee>=13.0.0",
    "greenlet>=3.1.1",
    # Excel Processing
    "xlrd>=2.0.1",
    "openpyxl>=3.1.0",
    "pdfplumber>=0.11.9",
    "pandas>=2.2.0",
    # CAPTCHA OCR Engine (PaddleOCR v2 stable branch)
    # CRITICAL: paddlepaddle must stay < 3.0.0
    # Version 3.x contains an architecture bug on Windows Intel CPUs
    # (onednn_instruction.cc:118). Locked to the stable 2.x branch.
    "paddlepaddle>=2.6.0,<3.0.0",
    "paddleocr>=2.8.0,<3.0.0",
    # Image Processing and PaddleOCR runtime extras
    "Pillow>=10.0.0",
    "numpy<2.0.0",
    "lmdb>=1.6.0",
    "scipy>=1.11.0",
    "scikit-image>=0.24.0",
    "imgaug>=0.4.0",
    "pyclipper>=1.3.0",
    "shapely>=2.0.0",
    "opencv-python>=4.10.0",
    "opencv-contrib-python>=4.10.0",
    "albumentations>=1.4.0",
    "albucore>=0.0.20",
    "requests>=2.31.0",
    # PaddlePaddle imports setuptools at runtime (cpp_extension)
    "setuptools",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
